<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingHorizontal="40dp"
tools:context=".RegisterPage">

<ImageView
    android:id="@+id/ivHello"
    android:layout_width="215dp"
    android:layout_height="65dp"
    android:src="@drawable/imagen_1"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp"
    />

<EditText
    android:id="@+id/etName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/name"
    android:inputType="text"
    android:layout_marginTop="@dimen/input_margin"
    />

<EditText
    android:id="@+id/etLastName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/last_name"
    android:inputType="text"
    android:layout_marginTop="@dimen/input_margin"
    />

<EditText
    android:id="@+id/etE_Mail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/e_mail"
    android:inputType="textEmailAddress"
    android:layout_marginTop="@dimen/input_margin"
    />

<EditText
    android:id="@+id/etPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:layout_marginTop="@dimen/input_margin"
    />

<CheckBox
    android:id="@+id/cbTerms"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/terms"
    android:layout_marginTop="@dimen/input_margin"
    android:textStyle="italic"
    />

<Button
    android:id="@+id/btnSign"
    android:layout_width="219dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="30dp"
    android:text="@string/sign_in"
    android:textColor="@color/dustyWhite"
    android:background="@drawable/ronud_button"
    />
</LinearLayout>