<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpleishGrey"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivImagen"
        android:layout_width="match_parent"
        android:layout_height="461dp"
        android:src="@drawable/thecheezery"
        android:scaleType="fitXY"
        />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/dustyWhite"
        android:text="@string/welcome" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="italic"
        android:textColor="@color/dustyWhite"
        android:text="@string/description"
        android:textAlignment="center"
        android:padding="15dp"/>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:background="@drawable/ronud_button"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"

        />

</LinearLayout>